build menu account

--- a/client/src/components/GlobalStyles/GlobalStyles.scss
+++ b/client/src/components/GlobalStyles/GlobalStyles.scss
@@ -1,5 +1,7 @@
 //@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
+@import '../../../node_modules/bootstrap-scss/bootstrap.scss';
+
 :root {
   --primary: #fe2c55;
   --black: #000;
@@ -15,9 +17,9 @@
 }
 
 * {
-  margin: 0;
-  padding: 0;
   box-sizing: border-box;
+  background-color: #fff;
+  color: #000;
 }
 
 html {
