--- a/client/src/layouts/DefaultLayout/DefaultLayout.module.scss
+++ b/client/src/layouts/DefaultLayout/DefaultLayout.module.scss
@@ -1,17 +1,17 @@
 .wrapper {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: var(--default-layout-header-height);
+  height: 100vh;
+  padding: 30px 120px 0;
 }
 
 .container {
-    width: var(--default-layout-width);
-    max-width: 100%;
-    padding: 0 var(--default-layout-horizontal-spacer);
-    display: flex;
-    margin-top: var(--default-layout-header-height);
+  display: flex;
+  width: 100%;
 }
 
 .content {
-    flex: 1;
+  flex: 1;
 }
