--- a/client/src/layouts/DefaultLayout/DefaultLayout.module.scss
+++ b/client/src/layouts/DefaultLayout/DefaultLayout.module.scss
@@ -1,17 +1,6 @@
-.wrapper {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-top: var(--default-layout-header-height);
-  height: 100vh;
-  padding: 30px 120px 0;
-}
-
-.container {
-  display: flex;
-  width: 100%;
-}
-
-.content {
-  flex: 1;
+.body {
+  min-height: calc(100vh - 8px);
+  position: relative;
+  background-color: #2c2c2c0a !important;
+  transition: margin 0.2s linear;
 }
