--- a/client/src/styles/GlobalStyles/GlobalStyles.scss
+++ b/client/src/styles/GlobalStyles/GlobalStyles.scss
@@ -21,6 +21,27 @@
   font-size: 12px;
 }
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Inter' sans-serif;
+}
+
+html {
+  font-size: 62.5%;
+}
+
+body {
+  font-weight: 500;
+  font-size: 1.6rem;
+  line-height: 1.6;
+}
+
+a {
+  text-decoration: none;
+}
+
 // * {
 //   box-sizing: border-box;
 // }
@@ -122,4 +143,20 @@
 
 .blur-xl {
   filter: blur(24px);
+}
+
+.css-1q964xs-MuiFormLabel-root-MuiInputLabel-root {
+  font-size: 2rem !important;
+}
+
+.css-1jk99ih-MuiInputBase-input-MuiOutlinedInput-input {
+  font-size: 2rem !important;
+}
+
+.css-lc42l8-MuiInputBase-input-MuiOutlinedInput-input {
+  font-size: 2rem !important;
+}
+
+.css-18pjc51-MuiFormLabel-root-MuiInputLabel-root {
+  font-size: 18px !important;
 }
