--- a/client/src/styles/GlobalStyles/GlobalStyles.scss
+++ b/client/src/styles/GlobalStyles/GlobalStyles.scss
@@ -21,9 +21,9 @@
   font-size: 12px;
 }
 
-// * {
-//   box-sizing: border-box;
-// }
+* {
+  box-sizing: border-box;
+}
 
 // body {
 //   font-family: var(--font-family);
