--- a/client/src/layouts/DefaultLayout/DefaultLayout.module.scss
+++ b/client/src/layouts/DefaultLayout/DefaultLayout.module.scss
@@ -1,5 +1,5 @@
 .body {
-  min-height: calc(100vh - 8px);
+  // min-height: calc(100vh - 8px);
   position: relative;
   background-color: #2c2c2c0a !important;
   transition: margin 0.2s linear;
