build-ui-admin-management

--- a/client/src/pages/AdminManagement/AdminManagement.module.scss
+++ b/client/src/pages/AdminManagement/AdminManagement.module.scss
@@ -1,5 +1,5 @@
 // Welcome card
-.welcome-card {
+.card {
   position: relative;
   background-color: #fff;
   box-shadow: 0 6px 10px -8px #c5d6d6;
@@ -43,5 +43,4 @@
 .attendance-text {
   font-size: 20px;
   font-weight: 600;
-  color: #3998c8;
 }
