--- a/client/src/pages/WebManagement/StudentManagementPage/StudentManagementPage.module.scss
+++ b/client/src/pages/WebManagement/StudentManagementPage/StudentManagementPage.module.scss
@@ -8,10 +8,10 @@
   height: 100%;
 }
 
-.medal-image {
+.student-image {
   position: absolute;
-  top: 0;
-  right: -40px;
+  top: 30px;
+  right: 8px;
 }
 
 .attendance-select {
