--- a/client/src/styles/GlobalStyles/GlobalStyles.scss
+++ b/client/src/styles/GlobalStyles/GlobalStyles.scss
@@ -50,8 +50,9 @@ h6 {
 // Title
 .title {
   font-family: 'Nunito', sans-serif !important;
-  font-size: 20px;
+  font-size: 22px;
   font-weight: 700;
+  text-shadow: 2px 4px 6px rgba(0, 0, 0, 0.2);
 }
 
 // Text
