--- a/client/src/pages/WebManagement/ScheduleManagementPage/ScheduleManagementPage.module.scss
+++ b/client/src/pages/WebManagement/ScheduleManagementPage/ScheduleManagementPage.module.scss
@@ -10,8 +10,8 @@
 
 .schedule-image {
   position: absolute;
-  top: 26px;
-  right: -18px;
+  top: 32px;
+  right: 8px;
 }
 
 .attendance-select {
@@ -43,4 +43,33 @@
 .attendance-text {
   font-size: 20px;
   font-weight: 600;
+}
+
+.schedule-title {
+  position: relative;
+  font-size: 38px !important;
+  display: inline-block;
+  text-shadow: 2px 4px 6px rgba(0, 0, 0, 0.2);
+
+  &::before,
+  &::after {
+    content: '';
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    border-radius: 5px;
+    background: linear-gradient(135deg, #8baccd, #1976d2);
+  }
+
+  &::before {
+    bottom: -9px;
+    width: calc(60%);
+    height: 2px;
+  }
+
+  &::after {
+    bottom: -18px;
+    width: 100%;
+    height: 3px;
+  }
 }
