build-ui-student-management

--- a/client/src/pages/WebManagement/StudentManagementPage/ModalStudentDetails/ModalStudentDetails.module.scss
+++ b/client/src/pages/WebManagement/StudentManagementPage/ModalStudentDetails/ModalStudentDetails.module.scss
@@ -2,21 +2,10 @@
   position: relative;
 }
 
-.modal-content {
-  padding-top: 48px;
-  padding-bottom: 20px;
-  text-align: center;
-}
-
-.modal-schedule-title {
+.modal-Student-title {
   position: absolute;
   top: 13px;
   left: 12px;
-}
-
-.line-break {
-  height: 2px;
-  background: linear-gradient(135deg, #b9d1e9, #1976d2);
 }
 
 .modal-icon-close {
@@ -37,11 +26,22 @@
   z-index: 1;
 }
 
-.content-file-upload-wrapper {
+.modal-content {
+  padding-top: 48px;
+  padding-bottom: 20px;
+  text-align: center;
+}
+
+.line-break {
+  height: 2px;
+  background: linear-gradient(135deg, #b9d1e9, #1976d2);
+}
+
+.content-student-wrapper {
   padding: 30px;
 }
 
-.content-file-upload {
+.content-student {
   border-radius: 5px;
   box-shadow:
     0 10px 20px rgba(0, 0, 0, 0.3),
@@ -49,8 +49,9 @@
   padding: 20px 18px;
 }
 
-.upload-file-title {
+.student-name {
   position: relative;
+  margin-bottom: 38px;
 
   &::before {
     content: '';
@@ -65,14 +66,23 @@
   }
 }
 
-.upload-file-btn {
-  background-color: #56b1da;
-  color: #fff;
-  cursor: pointer;
-  padding: 8px 20px;
+.student-avatar {
   border-radius: 5px;
+  border: 1px solid #ccc;
+  width: 180px;
+  box-shadow:
+    0 10px 20px rgba(0, 0, 0, 0.3),
+    0 6px 6px rgba(0, 0, 0, 0.2);
 }
 
-input[type='file'] {
-  display: none;
+.student-details {
+  font-size: 18px;
+
+  p {
+    text-align: left;
+  }
+
+  span {
+    font-weight: 600;
+  }
 }
