--- a/client/src/components/VemLoader/VemLoader.module.scss
+++ b/client/src/components/VemLoader/VemLoader.module.scss
@@ -17,7 +17,7 @@
   top: 10px;
   left: 10px;
   border-radius: 50%;
-  box-shadow: 0 2px 0 0 var(--primary);
+  box-shadow: 0 2px 0 0 #1976d2;
   transform-origin: 40px 41px;
 }
 .loading-container {
