--- a/client/src/pages/WebManagement/ScheduleManagementPage/ScheduleManagementPage.module.scss
+++ b/client/src/pages/WebManagement/ScheduleManagementPage/ScheduleManagementPage.module.scss
@@ -2,7 +2,9 @@
 .card {
   position: relative;
   background-color: #fff;
-  box-shadow: 0 6px 10px -8px #c5d6d6;
+  box-shadow:
+    0 10px 20px rgba(0, 0, 0, 0.3),
+    0 6px 6px rgba(0, 0, 0, 0.2);
   border-radius: 6px;
   padding: 18px;
   height: 100%;
@@ -66,7 +68,7 @@
     left: 50%;
     transform: translateX(-50%);
     border-radius: 5px;
-    background: linear-gradient(135deg, #8baccd, #1976d2);
+    background: linear-gradient(135deg, #b9d1e9, #1976d2);
   }
 
   &::before {
