--- a/client/src/styles/GlobalStyles/GlobalStyles.scss
+++ b/client/src/styles/GlobalStyles/GlobalStyles.scss
@@ -69,6 +69,22 @@ h6 {
   --bs-btn-hover-bg: #7fbeda !important;
 }
 
+.filter-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #2197cd !important;
+  border-color: #2197cd !important;
+  min-width: 150px;
+  height: 35px;
+  font-size: 16px !important;
+  border-radius: 7px;
+
+  &:hover {
+    opacity: 0.8;
+  }
+}
+
 // Modal
 .modal.show .modal-dialog {
   box-shadow: 0 8px 16px 8px rgb(0, 0, 0, 0.3);
