--- a/client/src/styles/GlobalStyles/GlobalStyles.scss
+++ b/client/src/styles/GlobalStyles/GlobalStyles.scss
@@ -8,11 +8,6 @@
   --black: #000;
   --white: #fff;
   --text-color: #808b8d;
-
-  // Default layout
-  --default-layout-header-height: 60px;
-  --default-layout-width: 1150px;
-  --default-layout-horizontal-spacer: 24px;
 }
 
 .ant-form legend {
@@ -42,27 +37,61 @@ h6 {
   padding: 0;
 }
 
-// Font
+// Nav ----------------------------------------------------
+.nav-tabs .nav-link.active {
+  background-color: #ebeaea !important;
+}
+
+.nav-item {
+  a {
+    font-family: 'Nunito', sans-serif !important;
+    font-size: 18px;
+    font-weight: 700;
+    text-shadow: 2px 3px 3px rgba(0, 0, 0, 0.3);
+    color: #000;
+    text-transform: uppercase;
+  }
+}
+
+.nav-tabs .nav-link.active {
+  color: rgb(25, 118, 210);
+}
+
+ul.nav.nav-tabs {
+  display: flex !important;
+  justify-content: space-between !important;
+  border-bottom: 2px solid #ccc !important;
+  box-shadow: 6px 2px 6px rgb(0, 0, 0, 0.3);
+  margin-bottom: 38px;
+
+  li {
+    flex-grow: 1 !important;
+    text-align: center !important;
+    cursor: pointer !important;
+  }
+}
+
+// Font ---------------------------------------------------
 .font-Nunito {
   font-family: 'Nunito', sans-serif !important;
 }
 
-// Title
+// Title ---------------------------------------------------
 .title {
   font-family: 'Nunito', sans-serif !important;
-  font-size: 22px;
+  font-size: 26px;
   font-weight: 700;
-  text-shadow: 2px 4px 6px rgba(0, 0, 0, 0.2);
+  text-shadow: 2px 3px 2px rgba(0, 0, 0, 0.2);
 }
 
-// Text
+// Text ---------------------------------------------------
 .text {
   color: var(--text-color);
   font-size: 16px;
   line-height: 16px;
 }
 
-// Button
+// Button ---------------------------------------------------
 .btn-secondary {
   --bs-btn-border-color: none !important;
   --bs-btn-bg: #56b1da !important;
@@ -85,7 +114,16 @@ h6 {
   }
 }
 
-// Modal
+// Image ---------------------------------------------------
+.img {
+  transition: 0.5s;
+}
+
+img:hover {
+  transform: scale(1.1);
+}
+
+// Modal ---------------------------------------------------
 .modal.show .modal-dialog {
   box-shadow: 0 8px 16px 8px rgb(0, 0, 0, 0.3);
   border-radius: 8px;
@@ -97,6 +135,27 @@ h6 {
 
 .modal-body {
   padding: 0 !important;
+}
+
+// Icon round wrapper ----------------------------------------
+.div-icon-round {
+  position: relative;
+  border-radius: 50%;
+  width: 70px;
+  height: 70px;
+  cursor: pointer;
+
+  &:hover {
+    transform: translateY(-3px);
+    transition: 0.1s;
+  }
+}
+
+.icon-round {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 // Utility classes
