--- a/client/src/styles/GlobalStyles/GlobalStyles.scss
+++ b/client/src/styles/GlobalStyles/GlobalStyles.scss
@@ -120,7 +120,7 @@ ul.nav.nav-tabs {
 }
 
 img:hover {
-  transform: scale(1.1);
+  // transform: scale(1.1);
 }
 
 // Modal ---------------------------------------------------
